# data_engineering_challenge

./: README.md  pyproject.toml
data/: ratings.db
src/: aggregations.py  analysis.py  config.py  data_generator.py  database.py
tests/: test_aggregations.py  test_analysis.py  test_data_generator.py  test_database.py  test_functions.py
